--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -15,6 +15,7 @@
         "input_placeholder" : "Номер сертификат",
         "view_btn" : "Посмотреть полный сертификат"
     },
+    "comments_title" : "Комментарии о нас",
     "whatWeDo": {
         "subtitle" : "Что мы предлагаем",
         "title": "Безопасные и Ответственные Cертификаты",
