--- a/client/public/locales/uz/translation.json
+++ b/client/public/locales/uz/translation.json
@@ -15,6 +15,7 @@
         "input_placeholder" : "Sertifikat raqamingiz",
         "view_btn" : "Sertifikatni to'liq ko'rish"
     },
+    "comments_title" : "Biz haqimizda izohlar",
     "whatWeDo": {
         "subtitle" : "Biz taklif qilamiz",
         "title": "Xavfsiz va ishonchli Sertifikatlar",
