feat:expiration and validation added to the certificate displays

--- a/client/public/locales/uz/translation.json
+++ b/client/public/locales/uz/translation.json
@@ -5,7 +5,7 @@
         "work_hours" : "Dush - Yak",
         "email" : "Elektron pochta",
         "tel" : "Tel",
-        "all" : "Barcha kunlar"
+        "all" : "Barcha kunlari"
     },
     "hero": { 
         "title": "Sertifikatlangan Professional Bo'ling!",
