feat:added image processing

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -95,7 +95,8 @@
   "services": {
     "create": "Create certificate",
     "manage": "Manage certificate",
-    "analytics": "Analytics"
+    "analytics": "Analytics",
+    "status": "Status"
   },
   "create": {
     "title": "Create",
