--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -94,7 +94,8 @@
   "services": {
     "create": "Создать сертификат",
     "manage": "Управление сертификатом",
-    "analytics": "Аналитика"
+    "analytics": "Аналитика",
+    "status": "Статус"
   },
   "create": {
     "title": "Создавать",
