--- a/client/public/locales/uz/translation.json
+++ b/client/public/locales/uz/translation.json
@@ -94,7 +94,8 @@
   "services": {
     "create": "Sertifikat yaratish",
     "manage": "Sertifikat boshqarish",
-    "analytics": "Analitika"
+    "analytics": "Analitika",
+    "status": "Xolat"
   },
   "create": {
     "title": "Sertifikat yaratish",
